# pace

./: .cliffignore  .dprint.json  .env  .git-branches.toml  .gitignore  .insta.yaml  .justfile  CHANGELOG.md  Cargo.toml  README.md  TESTING.md  cliff.toml  deny.toml  dprint.json  justfile  release-plz.toml
.cargo/: audit.toml  config.toml
.config/: nextest.toml
.github/: codecov.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: audit.yaml  ci.yaml  coverage.yaml  lint-docs.yaml  msrv.yaml  release-plz.yml  release.yml  valgrind.yml
config/: README.md  pace.toml  project.toml  projects.pace.toml  tasks.pace.toml  tasks.toml
crates/: pace.excalidraw
crates/cli/: CHANGELOG.md  Cargo.toml  README.md
crates/cli/src/: commands.rs  lib.rs  pace.art  prompt.rs  setup.rs
crates/cli/src/commands/: adjust.rs  begin.rs  docs.rs  end.rs  hold.rs  now.rs  reflect.rs  resume.rs
crates/core/: CHANGELOG.md  Cargo.toml  README.md
crates/core/src/: commands.rs  config.rs  domain.rs  error.rs  event.rs  lib.rs  options.rs  service.rs  storage.rs  template.rs  util.rs
crates/core/src/commands/: adjust.rs  begin.rs  docs.rs  end.rs  hold.rs  now.rs  reflect.rs  resume.rs  review.rs  settings.rs
crates/core/src/domain/: activity.rs  activity_log.rs  category.rs  description.rs  filter.rs  id.rs  inbox.rs  intermission.rs  priority.rs  project.rs  reflection.rs  review.rs  status.rs  tag.rs  task.rs  time.rs
crates/core/src/service/: activity_store.rs  activity_tracker.rs
crates/core/src/storage/: file.rs  in_memory.rs  rusqlite.rs  sqlite.rs
crates/core/tests/: activity_store.rs  activity_tracker.rs  find_configs.rs  journeys.rs
crates/core/tests/fixtures/project1/subproject-a/: tasks.toml
crates/core/tests/fixtures/project1/subproject-c/: README.md  tasks.toml
crates/core/tests/integration/: activity_store.rs  activity_tracker.rs  find_configs.rs  main.rs  util.rs
crates/core/tests/journey/: hold_resume.rs  main.rs  start_finish_different_time_zone.rs
crates/error/: Cargo.toml  README.md
crates/error/src/: lib.rs
crates/server/: CHANGELOG.md  Cargo.toml  README.md
crates/server/src/: event.rs  lib.rs
crates/service/: Cargo.toml  README.md
crates/service/src/: activity_store.rs  activity_tracker.rs  lib.rs
crates/storage/: Cargo.toml  README.md
crates/storage/src/: convert.rs  entities.rs  entity.rs  error.rs  file.rs  in_memory.rs  lib.rs  mediator.rs  migration.rs  query.rs  repository.rs  sqlite.rs  storage.rs  storage_types.rs
crates/storage/src/entities/: activities.rs  activities_categories.rs  activities_tags.rs  activity_kinds.rs  activity_status.rs  categories.rs  description.rs  schema_migrations.rs  tags.rs
crates/storage/src/entity/: activities.rs  activities_categories.rs  activities_tags.rs  activity_kinds.rs  activity_status.rs  categories.rs  descriptions.rs  mod.rs  prelude.rs  tags.rs
crates/storage/src/migration/: create_activities_20240325143710.rs  create_activities_categories_20240326130013.rs  create_activities_tags_20240326125630.rs  create_activity_kind_values_20240327162015.rs  create_activity_kinds_20240326124253.rs  create_activity_status_20240326125819.rs  create_activity_status_values_20240327163645.rs  create_categories_20240326125937.rs  create_descriptions_20240329131712.rs  create_schema_migrations.rs  create_tags_20240326125555.rs  m20240325_000001_create_activities.rs  m20240326_000001_create_tags.rs  m20240326_000002_create_categories.rs  m20240326_000003_create_activities_tags.rs  m20240326_000003_create_activity_status.rs  m20240326_000004_create_activities_categories.rs  m20240326_000004_create_activity_kinds.rs  m20240326_000005_create_activities_tags.rs  m20240326_000006_create_activities_categories.rs  m20240327_000001_create_activity_status_values.rs  m20240327_000002_create_activity_kind_values.rs  m20240329_000001_create_descriptions.rs
crates/storage/src/repository/: activity.rs  category.rs  tag.rs
crates/storage/src/storage/: file.rs  in_memory.rs  sqlite.rs
crates/testing/: CHANGELOG.md  Cargo.toml
crates/testing/src/: lib.rs
crates/time/: CHANGELOG.md  Cargo.toml  README.md
crates/time/src/: date.rs  date_time.rs  duration.rs  error.rs  flags.rs  lib.rs  storage.rs  time.rs  time_frame.rs  time_range.rs  time_zone.rs
crates/time/src/storage/: rusqlite.rs
data/: activities.pace.toml  activity_2024-02.pace.toml  activity_2024-02.toml
db/: README.md  pace.sqlite3  schema.sql
db/migrations/: 20240325143710_create_activities.sql  20240326124253_create_activity_kinds.sql  20240326125555_create_tags.sql  20240326125630_create_activities_tags.sql  20240326125819_create_activity_status.sql  20240326125937_create_categories.sql  20240326130013_create_activities_categories.sql
docs/: LICENSE  README.md
migrations/2024-03-24-201233_create_activities/: down.sql  up.sql
scoop/: pace.json
src/: application.rs  commands.rs  config.rs  error.rs  lib.rs  prelude.rs
src/commands/: adjust.rs  begin.rs  completions.rs  craft.rs  docs.rs  end.rs  export.rs  hold.rs  now.rs  pomo.rs  reflect.rs  report.rs  resume.rs  review.rs  set.rs  settings.rs  setup.rs  start.rs  tasks.rs
templates/: README.md  pace_report_json.html
templates/reflections/: basic.html  basic.md
tests/: acceptance.rs  cli.rs
tests/fixtures/: pace.toml
tests/integration/: activity_store.rs  activity_tracker.rs  config.rs  find_configs.rs  main.rs  util.rs
tests/journey/: cli.rs  hold_resume.rs  main.rs  start_finish_different_time_zone.rs
tests/snapshots/: cli__adjust_activity_snapshot_passes.snap  cli__begin_snapshot_passes.snap  cli__end_with_active_activity_snapshot_passes.snap  cli__help_snapshot_passes.snap  cli__hold_with_active_activity_snapshot_passes.snap  cli__now_with_active_activity_snapshot_passes.snap  cli__reflect_date_snapshot_passes.snap  (+18 more)
wix/: main.wxs
xtask/: Cargo.toml
xtask/src/: helpers.rs  main.rs
xtask/src/tasks/: bloat.rs  coverage.rs  install_deps.rs  timings.rs
(+44 files in other folders)
