[package]
name = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
dialoguer = "0.11.0"
duct = "0.13.7"
eyre = { workspace = true }
fs_extra = "1.3.0"
glob = "0.3.1"
