[package]
name = "pace_cli"
version = "0.4.1"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = "1.74.1"
description = "pace-cli - library to support timetracking on the command line"

include = [
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "src/**/*",
  "Cargo.toml",
]

[dependencies]
chrono = "0.4.34"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
eyre = "0.6.12"
getset = "0.1.2"
pace_core = { workspace = true }
tracing = { version = "0.1.40", features = ["log"] }
typed-builder = "0.18.1"

[lints]
workspace = true
