[package]
name = "pace_cli"
version = "0.4.5"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "pace-cli - library to support timetracking on the command line"

include = [
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "src/**/*",
  "Cargo.toml",
]

[dependencies]
chrono = { workspace = true }
chrono-tz = { workspace = true }
dialoguer = { workspace = true, features = ["fuzzy-select"] }
eyre = { workspace = true }
getset = { workspace = true }
pace_core = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }

[lints]
workspace = true
