[package]
name = "pace_core"
version = "0.16.1"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "pace-core - library to support timetracking on the command line"

include = [
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "src/**/*",
  "Cargo.toml",
]

# TODO!: Use features for adding optional dependencies for testing and merging etc.
[features]
default = []
cli = ["clap"]
sqlite = ["dep:diesel", "dep:libsqlite3-sys"]
clap = ["dep:clap"]
# testing = ["dep:arbitrary"]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true, features = ["serde"] }
clap = { workspace = true, optional = true }
diesel = { workspace = true, features = ["sqlite", "chrono"], optional = true }
directories = { workspace = true }
displaydoc = { workspace = true }
enum_dispatch = { workspace = true }
getset = { workspace = true }
itertools = { workspace = true }
libsqlite3-sys = { workspace = true, features = ["bundled"], optional = true }
merge = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
open = { workspace = true }
pace_time = { workspace = true }
parking_lot = { workspace = true, features = ["deadlock_detection"] }
rayon = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
tabled = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, features = ["indexmap", "preserve_order"] }
tracing = { workspace = true }
typed-builder = { workspace = true }
ulid = { workspace = true, features = ["serde"] }
wildmatch = { workspace = true }

[dev-dependencies]
eyre = { workspace = true }
insta = { workspace = true, features = ["toml", "redactions"] }
pace_testing = { workspace = true }
rstest = { workspace = true }
similar-asserts = { workspace = true, features = ["serde"] }

[lints]
workspace = true
