[package]
name = "pace_core"
version = "0.19.0"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "pace-core - library to support timetracking on the command line"

include = [
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "src/**/*",
  "Cargo.toml",
]

[features]
default = ["cli"]
cli = ["clap"]
clap = ["dep:clap"]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true, features = ["serde"] }
clap = { workspace = true, optional = true, features = ["env", "wrap_help", "derive"] }
directories = { workspace = true }
displaydoc = { workspace = true }
dotenvy = { workspace = true }
getset = { workspace = true }
itertools = { workspace = true }
merge = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
once_cell = { workspace = true }
open = { workspace = true }
pace_time = { workspace = true, features = ["rusqlite"] }
parking_lot = { workspace = true, features = ["deadlock_detection"] }
rayon = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
strum_macros = { workspace = true }
tabled = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, features = ["indexmap", "preserve_order"] }
tracing = { workspace = true }
typed-builder = { workspace = true }
ulid = { workspace = true, features = ["serde"] }
wildmatch = { workspace = true }

[dev-dependencies]
eyre = { workspace = true }
insta = { workspace = true, features = ["toml", "redactions"] }
rstest = { workspace = true }
similar-asserts = { workspace = true, features = ["serde"] }
simplelog = { workspace = true }

[lints]
workspace = true
