[package]
name = "pace_error"
version = "0.1.0"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "pace-error - library for error handling in pace ecosystem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
displaydoc = { workspace = true }
miette = { workspace = true, features = ["fancy"] }
sea-orm = { workspace = true }
serde_json = { workspace = true }
tera = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
ulid = { workspace = true }

[lints]
workspace = true
