[package]
name = "pace_storage"
version = "0.1.0"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "pace-storage - a library handling storage engines for pace"

include = [
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "src/**/*",
  "Cargo.toml",
]

# TODO: With our limited scope, we don't feature gate anything
# [features]
# default = ["db"]
# db = ["rusqlite"]
# rusqlite = [
#   "dep:rusqlite",
#   "dep:libsqlite3-sys",
#   "dep:sea-query",
#   "dep:sea-query-rusqlite",
# ]

[dependencies]
displaydoc = { workspace = true }
itertools = { workspace = true }
libsqlite3-sys = { workspace = true, features = ["bundled"] }
merge = { workspace = true }
pace_core = { workspace = true }
pace_error = { workspace = true }
pace_time = { workspace = true, features = ["db"] }
parking_lot = { workspace = true, features = ["deadlock_detection"] }
rayon = { workspace = true }
rusqlite = { workspace = true, features = ["bundled", "chrono"] }
sea-query = { workspace = true, features = ["derive", "attr", "with-chrono", "backend-sqlite"] }
sea-query-rusqlite = { workspace = true, features = ["with-chrono"] }
strum = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true, features = ["indexmap", "preserve_order"] }
tracing = { workspace = true }
ulid = { workspace = true, features = ["serde"] }

[dev-dependencies]
chrono = { workspace = true, features = ["serde"] }

[lints]
workspace = true
