[package]
name = "pace_storage"
version = "0.1.0"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "pace-storage - a library handling storage engines for pace"

include = [
  "LICENSE",
  "README.md",
  "CHANGELOG.md",
  "src/**/*",
  "Cargo.toml",
]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
displaydoc = { workspace = true }
getset = { workspace = true }
itertools = { workspace = true }
libsqlite3-sys = { workspace = true, features = ["bundled"] }
merge = { workspace = true }
pace_core = { workspace = true }
pace_error = { workspace = true }
pace_time = { workspace = true }
parking_lot = { workspace = true, features = ["deadlock_detection"] }
rayon = { workspace = true }
sea-orm = { workspace = true, features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros", "mock", "with-chrono", "debug-print"] }
sea-orm-migration = { workspace = true }
strum = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, default-features = false, features = ["rt-multi-thread"] }
toml = { workspace = true, features = ["indexmap", "preserve_order"] }
tracing = { workspace = true }
typed-builder = { workspace = true }
ulid = { workspace = true, features = ["serde"] }

[dev-dependencies]
chrono = { workspace = true, features = ["serde"] }

[lints]
workspace = true
