[package]
name = "pace_testing"
version = "0.1.0"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
readme = { workspace = true }
repository = { workspace = true }
description = "pace-testing - Testing for the pace ecosystem"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
pace_core = { workspace = true }
rstest = "0.18.2"
similar-asserts = { workspace = true }

[lints]
workspace = true
