[package]
name = "pace_time"
version = "0.1.0"
authors = { workspace = true }
categories = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
keywords = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "pace-time - a library for handling date times, ranges, and durations for pace"

[features]
default = ["cli"]
cli = ["clap"]
clap = ["dep:clap"]

[dependencies]
chrono = { workspace = true, features = ["serde"] }
chrono-tz = { workspace = true, features = ["serde"] }
clap = { workspace = true, optional = true, features = ["env", "wrap_help", "derive"] }
derive_more = { workspace = true, features = ["add", "add_assign"] }
displaydoc = { workspace = true }
getset = { workspace = true }
humantime = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, features = ["log"] }
typed-builder = { workspace = true }

[dev-dependencies]
eyre = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
